ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Contractor_Address_Verified__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Address_Verified__c</fullName>
    <formula>IF(
    ISBLANK(Contractor__c) = TRUE,
    &quot;&quot;,
	IF(
          TEXT(Contractor__r.Address_Verification_Status__c) = &apos;Verified&apos;,
    &quot;Yes&quot;,
    &quot;No&quot; 
)  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractor Address Verified</label>
    <type>Text</type>
</CustomField>