ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Contractor_Shared_With__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Shared_With__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <description>Capture the name of the Role/ Group that the Parent Contractor to the Case is shared with.
It will be a comma separated text field that that will be used in the Case Sharing Rule to show/ hide the Cases that are In Litigation.
The Case Criteria based sharing rules will use this text in combination with the CONTAINS operator to match the Account Shared with Role/Group name with the Case Shared with Role/Group</description>
    <inlineHelpText>Capture the name of the Role/ Group that the Parent Contractor to the Case is shared with.</inlineHelpText>
    <label>Contractor Shared With</label>
    <length>255</length>
    <type>Text</type>
</CustomField>