ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Correspondence_Barcode__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Barcode__c</fullName>
    <description>Creates a bar code using a URL driven service. There might be a better way to do this...</description>
    <formula>IMAGE(&apos;https://www.barcodesinc.com/generator/image.php?code=QQ&apos; &amp; Claim_Number__c &amp; &apos;CORRESPONDENCE&amp;style=197&amp;type=C128B&amp;width=200&amp;height=50&amp;xres=1&amp;font=3&apos;, &apos;Case Bar Code&apos;, 50, 200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correspondence Barcode</label>
    <type>Text</type>
</CustomField>