ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Correspondence_Barcode_URL__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Barcode_URL__c</fullName>
    <formula>&apos;https://www.barcodesinc.com/generator/image.php?code=QQ&apos; &amp; Claim_Number__c &amp; &apos;CORRESPONDENCE&amp;style=197&amp;type=C128B&amp;width=300&amp;height=50&amp;xres=1&amp;font=3&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correspondence Barcode URL</label>
    <type>Text</type>
</CustomField>