ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Courier__c.field-meta.xml
<CustomField>
    <fullName>Courier__c</fullName>
    <description>Courer company used for tracking</description>
    <label>Courier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Courier</valueSetName>
    </valueSet>
</CustomField>