ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/CPI_Factor__c.field-meta.xml
<CustomField>
    <fullName>CPI_Factor__c</fullName>
    <description>To track the CPI Factor applied to the Labour settlement</description>
    <label>CPI Factor</label>
    <precision>18</precision>
    <scale>17</scale>
    <type>Percent</type>
</CustomField>