ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Created_By_Department__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Department__c</fullName>
    <formula>CreatedBy.Department</formula>
    <inlineHelpText>The department the user who created the claim works in.</inlineHelpText>
    <label>Created By Department</label>
    <type>Text</type>
</CustomField>