ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Created_By_Me__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Me__c</fullName>
    <description>Used to flag that the running user is the author of the Case</description>
    <formula>CreatedById =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Me</label>
    <type>Checkbox</type>
</CustomField>