ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/CSDaysOpen__c.field-meta.xml
<CustomField>
    <fullName>CSDaysOpen__c</fullName>
    <description>Created for Customer Service Implementation, This will calculate the age of a case</description>
    <formula>BLANKVALUE(DATEVALUE(ClosedDate), TODAY()) - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days a case has been opened</inlineHelpText>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>