ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/CustomerService__c.field-meta.xml
<CustomField>
    <fullName>CustomerService__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Customer Service Implementation. This will identify the case is related to Customer Service or not</description>
    <label>Customer Service?</label>
    <type>Checkbox</type>
</CustomField>