ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Date_Owner_Acquired_Building__c.field-meta.xml
<CustomField>
    <fullName>Date_Owner_Acquired_Building__c</fullName>
    <inlineHelpText>Date that the current owner acquired the property</inlineHelpText>
    <label>Date Owner Acquired Building</label>
    <type>Date</type>
</CustomField>