ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <description>The date on which the claim is submitted.</description>
    <label>Date Submitted</label>
    <type>DateTime</type>
</CustomField>