ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/DateInspected__c.field-meta.xml
<CustomField>
    <fullName>DateInspected__c</fullName>
    <description>The Date when products were inspected as part of the Claims process.</description>
    <label>Date Inspected</label>
    <type>Date</type>
</CustomField>