ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/DateofClaimApproval__c.field-meta.xml
<CustomField>
    <fullName>DateofClaimApproval__c</fullName>
    <description>The date the Claims Manager approved the claim, will be updated by Approval Process</description>
    <label>Date of Claim Approval</label>
    <type>Date</type>
</CustomField>