ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/DaysBetweenPOPHOIS__c.field-meta.xml
<CustomField>
    <fullName>DaysBetweenPOPHOIS__c</fullName>
    <formula>HOISIssuedDate__c -  POPReceivedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Between POP &amp; HOIS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>