ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Deck__c.field-meta.xml
<CustomField>
    <fullName>Deck__c</fullName>
    <inlineHelpText>Type of deck / material</inlineHelpText>
    <label>Deck</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deck</valueSetName>
    </valueSet>
</CustomField>