ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Decra_Claim__c.field-meta.xml
<CustomField>
    <fullName>Decra_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked by WF &quot;Tick Decra Claim&quot; when either Account OR Contractor OR Distributor has the field &quot;IKO Division Visible To&quot; set to &apos;Decra&apos;.
Used for Case Sharing.</description>
    <label>Decra Claim</label>
    <type>Checkbox</type>
</CustomField>