ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Created for Customer Service Implementation. This will store the department of contact, if the case needs to be routed.</description>
    <inlineHelpText>Select the contact department, if the case needs to be routed.</inlineHelpText>
    <label>Contact Dept</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSA</fullName>
            </value>
            <value>
                <fullName>IM/D</fullName>
            </value>
            <value>
                <fullName>RLM</fullName>
            </value>
            <value>
                <fullName>Plant</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>