ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Distributor for a Residential or Commercial Claim</description>
    <label>Distributor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Residential Account, Distributor, US Distributor</value>
        </filterItems>
        <filterItems>
            <field>Account.Legacy_Claim_Account__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributor Cases</relationshipLabel>
    <relationshipName>DistributorCases</relationshipName>
    <type>Lookup</type>
</CustomField>