ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Distributor_City__c.field-meta.xml
<CustomField>
    <fullName>Distributor_City__c</fullName>
    <description>Distrbutor billing city. Used for Conga. Do not add to layouts.</description>
    <formula>Distributor__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Distrbutor billing city. Used for Conga. Do not add to layouts.</inlineHelpText>
    <label>Distributor City</label>
    <type>Text</type>
</CustomField>