ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Distributor_Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Owner_Region__c</fullName>
    <description>Populated by flow with the Region for the owner of the Distributor Account (= part of the User&apos;s role name).</description>
    <label>Distributor Owner Region</label>
    <length>25</length>
    <type>Text</type>
</CustomField>