ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Distributor_Province__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Province__c</fullName>
    <description>Distributor Billing State. Used for Conga. Do not add to layouts.</description>
    <formula>Distributor__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Distrbutor billing city. Used for Conga. Do not add to layouts.</inlineHelpText>
    <label>Distributor Province</label>
    <type>Text</type>
</CustomField>