ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Earliest_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Payment_Date__c</fullName>
    <label>Earliest Payment Date</label>
    <summarizedField>Payment_Request__c.Status_Date_Payment_Document_Generated__c</summarizedField>
    <summaryForeignKey>Payment_Request__c.Case__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>