ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Eave__c.field-meta.xml
<CustomField>
    <fullName>Eave__c</fullName>
    <inlineHelpText># of eave vents?</inlineHelpText>
    <label>Eave</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>