ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Effective_Tax_rate__c.field-meta.xml
<CustomField>
    <fullName>Effective_Tax_rate__c</fullName>
    <formula>IF(Taxes_Additive__c,
(1 + Tax_Rate__c + Secondary_Tax_Rate__c),
(1 + Tax_Rate__c) * (1 + Secondary_Tax_Rate__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Tax rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>