ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/First_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Date__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-71
Populate the First Response Date with the first date captured by Response Date (Conga populated field)</description>
    <inlineHelpText>First Response Date when then document is generated</inlineHelpText>
    <label>First Response Date</label>
    <type>DateTime</type>
</CustomField>