ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Gable__c.field-meta.xml
<CustomField>
    <fullName>Gable__c</fullName>
    <inlineHelpText># of gable vents?</inlineHelpText>
    <label>Gable</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>