ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Generated_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Generated_Claim_Number__c</fullName>
    <description>Formatted Claim Number, which gives information on Line of Business and Date

{Country Code}{SectorShortCode}-{YYYYMMDD}-{CaseNumber}

CAC‌OM-20181108-00001

USR‌ES-20181108-00002

Europe not in scope now, but can be added in the future

If there is a parent case, the claim number will be inherited from the parent.

CLAIMSV2-891 (21-05-2020)-( added &quot;Decra&quot;, &quot;DEC&quot;) to the formula</description>
    <formula>IF( 
	ISBLANK(ParentId) , 
	(
		TEXT(Account.BillingCountryCode) &amp; 
		CASE(
			Sector__c,
                        &quot;Decra&quot;, &quot;DEC&quot;,
			&quot;Blair&quot;, &quot;BLR&quot;,
			&quot;Hyload&quot;, &quot;HYL&quot;,
			&quot;Commercial&quot;, &quot;COM&quot;,
			&quot;RES&quot;
		) &amp; 
		&quot;-&quot; &amp; 
		TEXT(
			YEAR(DATEVALUE(CreatedDate))
		) &amp; 
		IF(
			MONTH(DATEVALUE(CreatedDate)) &lt; 10,
			&apos;0&apos; + TEXT(MONTH(DATEVALUE(CreatedDate))),
			TEXT(MONTH(DATEVALUE(CreatedDate)))
		) &amp; 
		IF(
			DAY(DATEVALUE(CreatedDate)) &lt; 10,
			&apos;0&apos; + TEXT(DAY(DATEVALUE(CreatedDate))),
			TEXT(DAY(DATEVALUE(CreatedDate)))
		) &amp; 
		&quot;-&quot; &amp; 
		CaseNumber
	), 
	Parent.Claim_Number__c
)</formula>
    <label>Generated Claim Number</label>
    <type>Text</type>
</CustomField>