ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Goodwill_Amount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Goodwill_Amount_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The claim&apos;s Goodwill Amount has been approved. This does not mean the _claim_ has been fully approved. Check the Claim Approved checkbox status for that.</description>
    <inlineHelpText>The goodwill amount requested has been approved.</inlineHelpText>
    <label>Goodwill Amount Approved?</label>
    <type>Checkbox</type>
</CustomField>