ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Goodwill_Approval_Director__c.field-meta.xml
<CustomField>
    <fullName>Goodwill_Approval_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for Goodwill Approval process to determine proper Director for approval</description>
    <inlineHelpText>Must be populated for Goodwill approval process to work. Populated based on the user&apos;s Role HIerarchy.</inlineHelpText>
    <label>Goodwill Approval Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GoodwillDirector</relationshipName>
    <type>Lookup</type>
</CustomField>