ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Goodwill_Approval_Manager__c.field-meta.xml
<CustomField>
    <fullName>Goodwill_Approval_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Using this lookup instead of the standard User.Manager lookup as the DSM role should not be approving (so if Manager is a DSM, will use the Manager&apos;s Manager)</description>
    <inlineHelpText>Used for determining the first line of approval for Manager</inlineHelpText>
    <label>Goodwill Approval Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GoodwillManager</relationshipName>
    <type>Lookup</type>
</CustomField>