ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Goodwill_Approval_VP__c.field-meta.xml
<CustomField>
    <fullName>Goodwill_Approval_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To determine the VP that Goodwill Approvals should be passed to</description>
    <label>Goodwill Approval VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VPGoodwill</relationshipName>
    <type>Lookup</type>
</CustomField>