ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/GoodwillClaim__c.field-meta.xml
<CustomField>
    <fullName>GoodwillClaim__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether a Claim is a Goodwill Claim or not.</description>
    <label>Goodwill Claim</label>
    <type>Checkbox</type>
</CustomField>