ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/GoodwillClaimAmount__c.field-meta.xml
<CustomField>
    <fullName>GoodwillClaimAmount__c</fullName>
    <description>Sales reps enter a Claim Amount to specify how much to pay customer for a Goodwill Claim</description>
    <inlineHelpText>Please enter the Amount you want the customer to be paid out.</inlineHelpText>
    <label>Goodwill Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>