ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Hand_Seal_Bundle_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hand_Seal_Bundle_Rate__c</fullName>
    <defaultValue>$Setup.Warranty_Claims_Defaults__c.Hand_Seal_Bundle_Rate_Default__c</defaultValue>
    <description>Default bundle rate for Hand Seal settlements</description>
    <label>Hand Seal Bundle Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>