ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Hand_Seal_Flat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hand_Seal_Flat_Rate__c</fullName>
    <defaultValue>100</defaultValue>
    <description>CLAIMSV2 - 77. This field is used to hold the constant value of the flat rate for handseal</description>
    <inlineHelpText>Constant value of the flat rate for handseal</inlineHelpText>
    <label>Hand Seal Flat Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>