ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Hand_Seal_Material_Settlement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Hand_Seal_Material_Settlement_Cost__c</fullName>
    <description>CLAIMSV2 - 77. This field holds the handseal material settlement cost</description>
    <formula>Hand_Seal_Settlement__c + (Handseal_Replacement_Bundles__c * Bundle_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Handseal material settlement cost</inlineHelpText>
    <label>Hand Seal Material Settlement Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>