ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Hand_Seal_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Hand_Seal_Settlement__c</fullName>
    <description>Hand Seal settlements include a flat rate that is hard coded at $100. Settlements are often quoted without this amount...so this field only adds the $100 in.</description>
    <formula>Hand_Seal_Flat_Rate__c  +  Hand_Seal_Settlement_Bundles_Only__c</formula>
    <inlineHelpText>Includes the $100 flat rate that is added to hand seal settlements.</inlineHelpText>
    <label>Hand Seal Settlement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>