ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Hand_Seal_Settlement_Bundles_Only__c.field-meta.xml
<CustomField>
    <fullName>Hand_Seal_Settlement_Bundles_Only__c</fullName>
    <description>Hand Seal Settlement Amount without the flat fee of $100. This is needed for correspondence with customers.</description>
    <formula>BLANKVALUE(Num_of_Bundles_for_Settlement__c, Suggested_Bundles_for_Settlement__c)
  * Calculated_Hand_Seal_Bundle_Rate__c</formula>
    <inlineHelpText>Hand Seal Settlement Amount for the bundles only. An additional flat fee is paid to the customer for the total settlement.</inlineHelpText>
    <label>Hand Seal Settlement (Bundles Only)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>