ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Handseal_Replacement_Bundles__c.field-meta.xml
<CustomField>
    <fullName>Handseal_Replacement_Bundles__c</fullName>
    <defaultValue>0</defaultValue>
    <description>CLAIMSV2-88. The purpose of this field is to capture the number of bundles of shingles to the customer</description>
    <inlineHelpText>Number of bundles of shingles assigned to the customer</inlineHelpText>
    <label>Handseal Replacement Bundles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>