ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/HOIS_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>HOIS_Received_Date__c</fullName>
    <description>The date when Claims receives HOIS back from Claimant.</description>
    <label>HOIS Received Date</label>
    <type>Date</type>
</CustomField>