ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/HOISIssuedDate__c.field-meta.xml
<CustomField>
    <fullName>HOISIssuedDate__c</fullName>
    <description>The date HOIS was issued.</description>
    <label>HOIS Issued Date</label>
    <type>Date</type>
</CustomField>