ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Iko_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Iko_Product_Family__c</fullName>
    <description>Surfaces the Iko Product Famliy from the Product, to be used in Lookup filters</description>
    <formula>Product__r.Iko_Product_Family__c</formula>
    <label>Iko Product Family</label>
    <type>Text</type>
</CustomField>