ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <formula>Image( 	 
CASE(Brand__c,
&quot;CRCI&quot;, $Setup.Claims_Config__c.CRCI__c,
&quot;IKOL&quot;, $Setup.Claims_Config__c.IKOL__c,
&quot;IKOI&quot;, $Setup.Claims_Config__c.IKOI__c,
&quot;IKOM&quot;, $Setup.Claims_Config__c.IKOM__c,
&quot;BLAIRI&quot;,$Setup.Claims_Config__c.BLAIRI__c,
&quot;HYLOADI&quot;,$Setup.Claims_Config__c.HYLOADI__c,
&quot;DECRA&quot;,$Setup.Claims_Config__c.DECRAL__c,
&quot;&quot;), &quot;Image&quot;, 70, 120)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image URL</label>
    <type>Text</type>
</CustomField>