ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Initial_HOIS_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_HOIS_Issue_Date__c</fullName>
    <description>ClaimsV2 73 Capture the Initial HOIS Issue Date</description>
    <inlineHelpText>Initial HOIS Issue Date</inlineHelpText>
    <label>Initial HOIS Issue Date</label>
    <type>Date</type>
</CustomField>