ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Initial_Payment_Document_Generated__c.field-meta.xml
<CustomField>
    <fullName>Initial_Payment_Document_Generated__c</fullName>
    <description>CLAIMS - 328. Captures the initial date when the coupon is generated via Conga</description>
    <inlineHelpText>Captures the initial date when the coupon is generated via Conga</inlineHelpText>
    <label>Initial Coupon Document Generated</label>
    <type>Date</type>
</CustomField>