ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Initial_Response_Time_days__c.field-meta.xml
<CustomField>
    <fullName>Initial_Response_Time_days__c</fullName>
    <description>ClaimsV2 73 Capture the Initial Response Time in Days - calculating only the business days between HOIS Issue date and POP Received Date</description>
    <formula>MAX(
					(5 * ( FLOOR( ( Initial_HOIS_Issue_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Initial_HOIS_Issue_Date__c - DATE( 1900, 1, 8), 7 ) ) )
					    -
					(5 * ( FLOOR( ( POPReceivedDate__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( POPReceivedDate__c - DATE( 1900, 1, 8), 7 ) ) )
					,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference between initial HOIS Issue Date and P.O.P Received Date</inlineHelpText>
    <label>Initial Response Time (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>