ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Date__c</fullName>
    <description>Date of the product installation</description>
    <label>Installation Date</label>
    <type>Date</type>
</CustomField>