ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Iron_Clad_Period_Years__c.field-meta.xml
<CustomField>
    <fullName>Iron_Clad_Period_Years__c</fullName>
    <description>To be populated through CaseService class invoked by CaseTrigger. This field displays how many years is the iron clad warranty valid for.  When a shingle is first installed it has an iron clad period where the warranty covers labour and material for the shingles.  Depending on when installed and type of product they will have different period length.  This first states what is that length.</description>
    <label>Iron Clad Period (Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>