ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/isApproved__c.field-meta.xml
<CustomField>
    <fullName>isApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CLAIMSV2-176 Checked by approval processes. if this is checked, the claim should not be able to be resubmitted. This duplicates Salom&apos;s ClaimApproved__c field a bit but that had a bad name and a number of other related problems, so we should *move* towards using this gradually.</description>
    <label>Approved?</label>
    <type>Checkbox</type>
</CustomField>