ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/JDEOrderNo__c.field-meta.xml
<CustomField>
    <fullName>JDEOrderNo__c</fullName>
    <description>Created for Customer Service Implementation. This field will store the JDE Order No</description>
    <externalId>true</externalId>
    <inlineHelpText>User can update the Order number once it is created in JDE</inlineHelpText>
    <label>JDE Order No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>