ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Job_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Job_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to indicate that this claim is for a Job In Progress, to aid in setting priority</inlineHelpText>
    <label>Job In Progress</label>
    <type>Checkbox</type>
</CustomField>