ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Lab_Sample_PRM__c.field-meta.xml
<CustomField>
    <fullName>Lab_Sample_PRM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CLAIMS - 394. Indicates whether the Lab Sample should be reviewed by the Plant.</description>
    <inlineHelpText>Indicates whether the Lab Sample should be reviewed by the Plant.</inlineHelpText>
    <label>Lab Sample PRM</label>
    <type>Checkbox</type>
</CustomField>