ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Labour_Rate__c.field-meta.xml
<CustomField>
    <fullName>Labour_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Labour Rate to use in generating settlement</description>
    <inlineHelpText>Used by default for Labour calcluations; Actual Labour Rate will replace this value in calcluations</inlineHelpText>
    <label>Suggested Labour Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>