ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/LabourAmount_w_Tax_and_Add_Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>LabourAmount_w_Tax_and_Add_Item_Cost__c</fullName>
    <description>ClaimsV2-345
Created as Total Suggested Settlement Cost formula reach characters limit</description>
    <formula>IF( AND(
		OR(TEXT(Settlement_Type__c) = &apos;Cash Settlement&apos;, TEXT(Settlement_Type__c) = &apos;Cash Settlement - Material Only&apos;), (NOT(ISBLANK(Settlement_Amount__c)))
	),
	0,
	(Actual_Labor_Total__c * Effective_Tax_rate__c) + Total_Cost_of_Additional_Settlement_Item__c
)</formula>
    <label>LabourAmount w Tax and Add Item Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>