ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Leaking__c.field-meta.xml
<CustomField>
    <fullName>Leaking__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this is related to a leaking issue, and will be used for prioritization</inlineHelpText>
    <label>Leaking?</label>
    <type>Checkbox</type>
</CustomField>