ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Legacy_ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ClosedDate__c</fullName>
    <description>Field where the closed date information from the legacy system would be populated
ClaimsV2-699</description>
    <label>Legacy ClosedDate</label>
    <type>DateTime</type>
</CustomField>