ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Legacy_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_External_ID__c</fullName>
    <description>This is to identify and retain the WCMS system reference ID.</description>
    <externalId>true</externalId>
    <inlineHelpText>Legacy Claim Number from WCMS</inlineHelpText>
    <label>Legacy Claim Number</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>